--- a/Imprevus.tex
+++ b/Imprevus.tex
@@ -9,8 +9,9 @@ pour correctement s'appuyer sur le profilé et le rail rentre dans la rainure lo
     \label{fig:FixRailMagProb}
 \end{figure}
 
-La solution apportée à ce problème est l'utilisation de plaques de fixations placées entre le rail et le profilé. Ceci va permettre de répartire
-la charge de chaque côté de la rainure et d'empêcher le rail de pencher en rentrant dans la rainure. Voici des images des deux plaques créées.
+La solution apportée à ce problème est l'utilisation de plaques de fixations placées entre le rail et le profilé. Ceci va permettre de répartir
+la charge de chaque côté de la rainure et d'empêcher le rail de pencher en rentrant dans la rainure. Les représentations des deux plaques créées
+sont illustrées ci-dessous.
 
 \begin{figure}[H]
     \centering
