--- a/Mecanique.tex
+++ b/Mecanique.tex
@@ -1,6 +1,6 @@
 Plusieurs pièces mécaniques ont dû être développées pendant ce projet comme par exemple le support de pieds  qui a déjà été décrit au chapitre \ref{sec:DescStruct}.
-Maintenant que les éléments sont en place, il faut les lier ensemble avec des pièces faites sur mesure. Toutes les pièces sont faîtes
-d'aluminium EN-AW 6082 sauf si mentionné autrement. Les dimensions indiquées sur les figures sont en mm sauf sin mentionné autrement.
+Maintenant que les éléments sont en place, il faut les lier ensemble avec des pièces faites sur mesure. Toutes les pièces sont faites
+d'aluminium EN-AW 6082 sauf si mentionné autrement. Les dimensions indiquées sur les figures sont en mm sauf si mentionné autrement.
 
 \section{Liaison Moteur-Glider}\label{sec:LiaisonMotGlid}
 La liaison entre le chariot du guidage et le \gls{glider} du moteur va se faire en deux pièces vissées ensemble. La pièce
@@ -11,32 +11,32 @@ ce qui nécessitera donc des lamages. La fixation sur l'autre pièce se fait sur
 sont présents avec une tolérance H7 pour des goupilles qui permettent l'indexage avec l'autre pièce . On obtient la pièce suivante.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.6\textwidth]{assets/figures/LiaisonChariot.svg}
-  \caption{Représentation de la pièce de liaison du chariot}
-  \label{fig:LiaisonChariot}
+    \centering
+    \includegraphics[width = 0.6\textwidth]{assets/figures/LiaisonChariot.svg}
+    \caption{Représentation de la pièce de liaison du chariot}
+    \label{fig:LiaisonChariot}
 \end{figure}
 
 La seconde pièce devra évidemment se lier avec la première, mais aussi avec le moteur. La première pièce ayant les taraudages, celle-ci aura
 quatre lamages M5 ainsi que deux trous avec la tolérance K7 pour les goupilles d'indexage. Pour la fixation au moteur, quatre lamages M3 suffiront. Deux autres
 éléments viennent encore se fixer sur cette pièce: le support de la tête de lecture pour la règle linéaire et la chaîne porte-câbles. Pour le
 support de tête de lecture, trois taraudages M4 sont placés sur un côté, alors que deux trous taraudés sont utilisés pour fixer la chaîne
-porte-câbles. Finalement, voilà à quoi ressemble la pièce.
+porte-câbles. La pièce finale est représentée ci-dessous.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonMoteur.svg}
-  \caption{Représentation de la pièce de liaison du moteur}
-  \label{fig:LiaisonMoteur}
+    \centering
+    \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonMoteur.svg}
+    \caption{Représentation de la pièce de liaison du moteur}
+    \label{fig:LiaisonMoteur}
 \end{figure}
 
-L'assemblage de ces pièces entre elles et avec leur liaisons directes donne la représentation suivante.
+L'assemblage de ces pièces entre elles et avec leur liaisons directes donne la mise en plan suivante.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.8\textwidth]{assets/figures/AssemblageGuidageEntrainement.svg}
-  \caption{Représentation de l'assemblage des pièces de guidage et d'entrainement du système}
-  \label{fig:AssGuiEntr}
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/AssemblageGuidageEntrainement.svg}
+    \caption{Représentation de l'assemblage des pièces de guidage et d'entrainement du système}
+    \label{fig:AssGuiEntr}
 \end{figure}
 
 \section{Support tête de lecture}\label{sec:SupTeteLect}
@@ -45,19 +45,19 @@ lamages M4 pour se fixer à la liaison moteur et aussi deux trous de passage pou
 pour faire le réglage en position de la tête. La pièce obtenue est la suivante.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportTeteLecture.svg}
-  \caption{Représentation du support de tête de lecture}
-  \label{fig:SupTeteLect}
+    \centering
+    \includegraphics[width = 0.4\textwidth]{assets/figures/SupportTeteLecture.svg}
+    \caption{Représentation du support de tête de lecture}
+    \label{fig:SupTeteLect}
 \end{figure}
 
-Voici une représentation avec le support monté sur la liaison au moteur et avec la tête de lecture.
+Ci-dessous, une représentation avec le support monté sur la liaison au moteur et avec la tête de lecture.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.6\textwidth]{assets/figures/AssemblageMesureLineaire.svg}
-  \caption{Représentation du support de tête de lecture assemblée avec les pièces proches dans le système}
-  \label{fig:AssMesLin}
+    \centering
+    \includegraphics[width = 0.6\textwidth]{assets/figures/AssemblageMesureLineaire.svg}
+    \caption{Représentation du support de tête de lecture assemblée avec les pièces proches dans le système}
+    \label{fig:AssMesLin}
 \end{figure}
 
 \section{Support amortisseur}\label{sec:SupAmort}
@@ -66,19 +66,19 @@ les chocs. Un trou taraudé M10 est nécessaire pour fixer l'amortisseur et deux
 étant dans des directions opposées, il faut créer deux supports symétriques pour pouvoir les fixer. Voici l'image d'un des supports.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.2\textwidth]{assets/figures/SupportAmortisseur.svg}
-  \caption{Représentation du support de l'amortisseur}
-  \label{fig:SupAmort}
+    \centering
+    \includegraphics[width = 0.2\textwidth]{assets/figures/SupportAmortisseur.svg}
+    \caption{Représentation du support de l'amortisseur}
+    \label{fig:SupAmort}
 \end{figure}
 
 Le placement des supports de l'amortisseur sur un des côtés est visible sur cette image.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.8\textwidth]{assets/figures/PlacementSupports.svg}
-  \caption{Représentation du placement de l'amortisseur pour un côté}
-  \label{fig:PlaceSup}
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/PlacementSupports.svg}
+    \caption{Représentation du placement de l'amortisseur pour un côté}
+    \label{fig:PlaceSup}
 \end{figure}
 
 \section{Partie tournante}\label{sec:PartieTour}
@@ -90,19 +90,19 @@ s'appuye les roulements donc une tolérance de M7 a été choisie car la bague e
 sont faibles \cite{Ajustements}. Voici à quoi ressemble la première partie de la pièce.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageEncodeur.svg}
-  \caption{Représentation du couplage à l'encodeur}
-  \label{fig:CouplEnco}
+    \centering
+    \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageEncodeur.svg}
+    \caption{Représentation du couplage à l'encodeur}
+    \label{fig:CouplEnco}
 \end{figure}
 
 Et voici la seconde partie qui vient se chasser dans le trou central de la première. C'est un arbre rectifié de 3~mm de diamètre et 32~mm
 de long en acier CK45.
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.3\textwidth]{assets/figures/CouplageEncodeur2.svg}
-  \caption{Représentation du couplage à l'encodeur}
-  \label{fig:CouplEnco2}
+    \centering
+    \includegraphics[width = 0.3\textwidth]{assets/figures/CouplageEncodeur2.svg}
+    \caption{Représentation du couplage à l'encodeur}
+    \label{fig:CouplEnco2}
 \end{figure}
 
 La pièce de couplage à la tige qui est attachée à celle montrée sur la figure \ref{fig:CouplEnco} est en \acrshort{PC}. Elle possède donc quatre
@@ -111,82 +111,82 @@ Une tolérance H7 est présente sur le diamètre intérieur de la pièce pour av
 La pièce ressemble à ceci.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.7\textwidth]{assets/figures/CouplageTige.svg}
-  \caption{Représentation du couplage à la tige}
-  \label{fig:CouplTige}
+    \centering
+    \includegraphics[width = 0.7\textwidth]{assets/figures/CouplageTige.svg}
+    \caption{Représentation du couplage à la tige}
+    \label{fig:CouplTige}
 \end{figure}
 
-Il y a aussi la tige, elle aussi en \acrshort{PC}, qui vient se placer dans le perçage de 10~mm de la pièce précédente. La tige a donc un
+La tige, elle aussi en \acrshort{PC}, vient se placer dans le perçage de 10~mm de la pièce précédente. La tige a donc un
 diamètre lui aussi égal à 10~mm et une longueur de 420~mm. Aucune autre modification n'est apportée à la tige à part un chanfrein afin d'éviter
 les arêtes coupantes.\\
 
 L'assemblage de ces différentes pièces ainsi que de la liaison au chariot et l'encodeur donne la représentation suivante.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.7\textwidth]{assets/figures/AssemblagePartieTournante.svg}
-  \caption{Représentation de l'assemblage des parties tournantes et leurs connections directes}
-  \label{fig:AssPartieTour}
+    \centering
+    \includegraphics[width = 0.7\textwidth]{assets/figures/AssemblagePartieTournante.svg}
+    \caption{Représentation de l'assemblage des parties tournantes et leurs connections directes}
+    \label{fig:AssPartieTour}
 \end{figure}
 
 Les forces qui s'appliquent aux roulements peuvent maintenant être calculées à l'aide du schéma de forces sur la figure \ref{fig:CalcRoul}.
 Les termes utilisés dans ce schéma sont les suivant:
 
 \begin{table}[H]
-  \centering
-  \caption{Valeurs utilisées pour les calculs}
-  \label{tab:ValCalcRoul}
-  \begin{tabular}{|l|l|l|l|}
-    \hline
-    \textbf{Donnée}                        & \textbf{Lettre} & \textbf{Valeur} & \textbf{Unité} \\ \hline
-    Masse de la tige                       & $m_T$           & 39              & $g$            \\ \hline
-    Masse du couplage à la tige            & $m_{CT}$        & 23              & $g$            \\ \hline
-    Masse du couplage à l'encodeur 1       & $m_{CE1}$       & 16              & $g$            \\ \hline
-    Masse du couplage à l'encodeur 2       & $m_{CE2}$       & 2               & $g$            \\ \hline
-    Accélération de la pesanteur sur Terre & $g$             & 9.81            & $m/s^2$        \\ \hline
-    Force radiale sur le roulement 1       & $F_{R1}$        & ?               & $N$            \\ \hline
-    Force radiale sur le roulement 2       & $F_{R2}$        & ?               & $N$            \\ \hline
-    Distance de $m_{CE2}$ à A              & $d_1$           & 1               & $mm$           \\ \hline
-    Distance de $F_{R1}$ à A               & $d_2$           & 4               & $mm$           \\ \hline
-    Distance de $m_{CE1}$ à A              & $d_3$           & 7.5             & $mm$           \\ \hline
-    Distance de $m_{CT}$ à A               & $d_4$           & 12.5            & $mm$           \\ \hline
-    Distance de $m_{T}$ à A                & $d_5$           & 30              & $mm$           \\ \hline
-  \end{tabular}%
+    \centering
+    \caption{Valeurs utilisées pour les calculs}
+    \label{tab:ValCalcRoul}
+    \begin{tabular}{|l|l|l|l|}
+        \hline
+        \textbf{Donnée}                        & \textbf{Lettre} & \textbf{Valeur} & \textbf{Unité} \\ \hline
+        Masse de la tige                       & $m_T$           & 39              & $g$            \\ \hline
+        Masse du couplage à la tige            & $m_{CT}$        & 23              & $g$            \\ \hline
+        Masse du couplage à l'encodeur 1       & $m_{CE1}$       & 16              & $g$            \\ \hline
+        Masse du couplage à l'encodeur 2       & $m_{CE2}$       & 2               & $g$            \\ \hline
+        Accélération de la pesanteur sur Terre & $g$             & 9.81            & $m/s^2$        \\ \hline
+        Force radiale sur le roulement 1       & $F_{R1}$        & ?               & $N$            \\ \hline
+        Force radiale sur le roulement 2       & $F_{R2}$        & ?               & $N$            \\ \hline
+        Distance de $m_{CE2}$ à A              & $d_1$           & 1               & $mm$           \\ \hline
+        Distance de $F_{R1}$ à A               & $d_2$           & 4               & $mm$           \\ \hline
+        Distance de $m_{CE1}$ à A              & $d_3$           & 7.5             & $mm$           \\ \hline
+        Distance de $m_{CT}$ à A               & $d_4$           & 12.5            & $mm$           \\ \hline
+        Distance de $m_{T}$ à A                & $d_5$           & 30              & $mm$           \\ \hline
+    \end{tabular}%
 \end{table}
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.8\textwidth]{assets/figures/CalculRoulements.svg}
-  \caption{Schéma de forces pour le calcul des efforts appliqués sur les roulements}
-  \label{fig:CalcRoul}
+    \centering
+    \includegraphics[width = 0.8\textwidth]{assets/figures/CalculRoulements.svg}
+    \caption{Schéma de forces pour le calcul des efforts appliqués sur les roulements}
+    \label{fig:CalcRoul}
 \end{figure}
 
 Les formules suivantes peuvent être tirées à partir du schéma dans le but d'obtenir les valeurs de $F_{R1}$ et $F_{R2}$.\\
 Somme des moments de forces pour pièces statiques autour du point A:
 
 \begin{equation}
-  \begin{aligned}
-     & \Sigma \vec{M}_A = 0                                                                                                                                                       \\
-     & \Rightarrow  m_T \cdot \vec{g} \cdot d_5 + m_{CT} \cdot \vec{g} \cdot d_4 + m_{CE1} \cdot \vec{g} \cdot d_3 - m_{CE2} \cdot \vec{g} \cdot d_1 - \vec{F}_{R1} \cdot d_2 = 0 \\
-     & \Rightarrow  \vec{F}_{R1} = \vec{g} \cdot \frac{m_T \cdot d_5 + m_{CT} \cdot d_4 + m_{CE1} \cdot d_3 - m_{CE2} \cdot d_1}{d_2}                                             \\
-     & = 9.81 \cdot \frac{0.039 \cdot 0.03 + 0.023 \cdot 0.0125 + 0.016 \cdot 0.0075 - 0.002 \cdot 0.001}{0.004} = 3.9~N
-  \end{aligned}
+    \begin{aligned}
+         & \Sigma \vec{M}_A = 0                                                                                                                                                       \\
+         & \Rightarrow  m_T \cdot \vec{g} \cdot d_5 + m_{CT} \cdot \vec{g} \cdot d_4 + m_{CE1} \cdot \vec{g} \cdot d_3 - m_{CE2} \cdot \vec{g} \cdot d_1 - \vec{F}_{R1} \cdot d_2 = 0 \\
+         & \Rightarrow  \vec{F}_{R1} = \vec{g} \cdot \frac{m_T \cdot d_5 + m_{CT} \cdot d_4 + m_{CE1} \cdot d_3 - m_{CE2} \cdot d_1}{d_2}                                             \\
+         & = 9.81 \cdot \frac{0.039 \cdot 0.03 + 0.023 \cdot 0.0125 + 0.016 \cdot 0.0075 - 0.002 \cdot 0.001}{0.004} = 3.9~N
+    \end{aligned}
 \end{equation}
 
 Somme des forces sur l'axe y pour pièces statiques:
 
 \begin{equation}
-  \begin{aligned}
-     & \Sigma \vec{F}_y = 0 \Rightarrow \vec{F}_{R1} - \vec{F}_{R2} - m_T \cdot \vec{g} - m_{CT} \cdot \vec{g} - m_{CE1} \cdot \vec{g} - m_{CE2} \cdot \vec{g} = 0 \\
-     & \Rightarrow \vec{F}_{R2} = \vec{F}_{R1} - \vec{g} \cdot (m_T + m_{CT} + m_{CE1} + m_{CE2})                                                                  \\
-     & = 3.9 - 9.81 \cdot (0.039 + 0.023 + 0.016 +0.002) = 3.1~N
-  \end{aligned}
+    \begin{aligned}
+         & \Sigma \vec{F}_y = 0 \Rightarrow \vec{F}_{R1} - \vec{F}_{R2} - m_T \cdot \vec{g} - m_{CT} \cdot \vec{g} - m_{CE1} \cdot \vec{g} - m_{CE2} \cdot \vec{g} = 0 \\
+         & \Rightarrow \vec{F}_{R2} = \vec{F}_{R1} - \vec{g} \cdot (m_T + m_{CT} + m_{CE1} + m_{CE2})                                                                  \\
+         & = 3.9 - 9.81 \cdot (0.039 + 0.023 + 0.016 +0.002) = 3.1~N
+    \end{aligned}
 \end{equation}
 
 La plus grande force radiale trouvée est $F_{R1}$ avec 3.9~N ce qui, comparée à la charge statique de base $C_0$ de 220~N que l'on peut retoruver dans
 l'annexe C, est négligeable (moins de 2\% de la valeur). La valeur est même plus petite que la limite de fatigue du roulement $P_u$ qui vaut 9~N.
-Même avec des accélérationsm d'environ 3g lors du fonctionnement du système, les forces ne seront que 3 fois plus grandes et donc toujours
+Même avec des accélérations d'environ 3g lors du fonctionnement du système, les forces ne seront que 3 fois plus grandes et donc toujours
 plus faibles que la charge statique de base.\\
 
 Les roulements ne sont pas précontraints pour plusieurs raisons: il n'y a pas de force conséquente sur les roulements, la vitesse de rotation
@@ -199,40 +199,41 @@ attaché au support pour chaîne porte-câbles qui est lui-même fixé sur un pr
 le profilé ainsi que deux autres passages de vis M6 pour la fixation de la chaîne. Il y a aussi un dégagement de matière afin de pouvoir faire
 passer les câbles qui sortent de la chaîne et qui continuent plus bas vers le boîtier électrique. Cette pièce est fabriquée en tôle pliée de
 2~mm d'épaisseur et nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052. Cette pièce fait 40~mm par 40~mm par 50~mm.
-Voici une image du support pour la chaîne.
+L'image ci-dessous représente le support pour la chaîne.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportChaineCable.svg}
-  \caption{Représentation du support pour la chaîne porte-câbles}
-  \label{fig:SupChaineCable}
+    \centering
+    \includegraphics[width = 0.4\textwidth]{assets/figures/SupportChaineCable.svg}
+    \caption{Représentation du support pour la chaîne porte-câbles}
+    \label{fig:SupChaineCable}
 \end{figure}
 
 \section{Plaque de passage pour moteur}\label{sec:PlaPassMot}
-Afin de cacher un peu plus l'arrière du système pour le rendre présentable et aussi afin d'augmenter la rigidité du système, une plaque est placée
-entre les deux profilés centraux. Les pièces faisant la liaison entre le moteur et le glider, décritent dans le chapitre \ref{sec:LiaisonMotGlid},
+Afin de cacher l'arrière du système pour le rendre davantage présentable, mais aussi afin d'augmenter la rigidité du système, une plaque est placée
+entre les deux profilés centraux. Les pièces faisant la liaison entre le moteur et le glider, décrites dans le chapitre \ref{sec:LiaisonMotGlid},
 passent par cet endroit donc il faut découper une zone de passage pour ces pièces. Cela donne la plaque suivante.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = \textwidth]{assets/figures/PlaquePassageMoteur.svg}
-  \caption{Représentation de la plaque centrale}
-  \label{fig:PLaPassMot}
+    \centering
+    \includegraphics[width = \textwidth]{assets/figures/PlaquePassageMoteur.svg}
+    \caption{Représentation de la plaque centrale}
+    \label{fig:PLaPassMot}
 \end{figure}
 
 \section{Assemblage mécanique complet}\label{sec:AssMecComp}
-Enfin, voici l'assemblage de toutes les pièces mécaniques fabriquées avec la structure et les composants commandés vu de face et de derrière.
+Enfin, l'assemblage de toutes les pièces mécaniques fabriquées avec la structure et les composants commandés vu de face et de derrière est
+donné ci-dessous.
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletFace.svg}
-  \caption{Représentation de l'assemblage mécanique complet vu de face}
-  \label{fig:AssCompFace}
+    \centering
+    \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletFace.svg}
+    \caption{Représentation de l'assemblage mécanique complet vu de face}
+    \label{fig:AssCompFace}
 \end{figure}
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletDerriere.svg}
-  \caption{Représentation de l'assemblage mécanique complet vu de derrière}
-  \label{fig:AssCompDerriere}
+    \centering
+    \includegraphics[width = 0.9\textwidth]{assets/figures/AssemblageCompletDerriere.svg}
+    \caption{Représentation de l'assemblage mécanique complet vu de derrière}
+    \label{fig:AssCompDerriere}
 \end{figure}
