--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,6 +1,6 @@
 \newacronym{Heig}{HEIG-VD}{Haute École d'Ingénieurie et de Gestion de l'état de Vaud}
 \newacronym{TB}{TB}{Travail de Bachelor}
-\newacronym{iAi}{iAi}{Institut d'Automatisation Industrielle de la HEIG}
+\newacronym{iAi}{iAi}{Institut d'Automatisation Industrielle de la HEIG-VD}
 \newacronym{PC}{PC}{Polycarbonate}
 \newacronym{PLA}{PLA}{Acide polylactique}
 \newacronym{PMMA}{PMMA}{Polyméthacrylate de méthyle aussi appelé plexiglas}
