--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,8 +1,8 @@
 Lors de ce projet, différentes parties du pendule inversé ont été réalisées. Tout d'abord, la mécanique du système incluant le guidage, la motorisation
-et la mise en place de capteurs a été faîte en suivant les demandes posées en début de projet. Ensuite, la partie électrique avec l'alimentation du
+et la mise en place de capteurs ont été faites en suivant les demandes posées en début de projet. Ensuite, la partie électrique avec l'alimentation du
 système et sa commande a aussi été développée pendant ce temps. Une grande quantité de pièces ont été commandées chez différents fabricants pour
 pouvoir construire ce projet. Ceci a requis du temps pour trouver et négocier des offres avec un prix et des temps de livraisons raisonnables
-pour rester dans le cadre du travail de Bachelor. D'autres pièces ont été développées personnellement et seront fabriquées par l'école.\\
+pour rester dans le cadre du travail de Bachelor. D'autres pièces ont été développées personnellement et ont été fabriquées par l'école.\\
 
 Les étapes restantes à effectuer pendant la seconde partie du \acrshort{TB} sont: l'assemblage de tous les éléments commandés pour avoir un
 système fonctionnel, la programmation de la commande \gls{PID} et les tests sur le fonctionnement du système.
