--- a/glossary.tex
+++ b/glossary.tex
@@ -24,3 +24,8 @@
   name=PID,
   description={Forme de régulation qui utilise des commandes proportionnelle, dérivée et intégrée pour réguler une variable}
 }
+
+\newglossaryentry{CAN}{
+  name=CAN,
+  description={Signifie "Controller Area Network", c'est un bus de donnée permettant la communication entre deux appareils}
+}
