--- a/introduction.tex
+++ b/introduction.tex
@@ -5,15 +5,15 @@ précipiter le système vers sa position d'équilibre stable, c'est à dire à l
 permettre de maintenir la position d'équilibre instable à l'aide du contrôle d'un élément du système. Il existe différents éléments qui sont
 contrôlables pour maintenir la position d'équilibre instable du pendule, mais dans le cas de ce projet, un déplacement horizontal de la base
 sera utilisé. L'objectif principal est d'avoir une maquette qui illustre la régulation afin de pouvoir l'expliquer facilement. Le projet est
-très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir à bout. Il y a du développement mécanique avec la structure
-qui permet le maintient ainsi que le déplacement horizontal du système. Il y a de la programmation pour pouvoir déplacer le système afin qu'il
-reste en équilibre et ce malgré des perturbations, grâce à la régulation \gls{PID}. Il y a aussi une partie d'électricité avec la mise en place
-d'un boîtier d'alimentation électrique fonctionnant avec une prise électrique classique de 230V.\\
+très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir à bout. Tout d'abord, le développement mécanique avec la structure
+qui permet le maintient ainsi que le déplacement horizontal du système. Ensuite, la programmation pour pouvoir déplacer le système afin qu'il
+reste en équilibre et ce malgré des perturbations, grâce à la régulation \gls{PID}. Enfin, une partie d'électricité avec la mise en place
+d'un boîtier d'alimentation électrique fonctionnant avec une prise électrique classique de 230V est aussi présente.\\
 
-Le projet abouti est une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandé
+Le projet abouti serait une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandé
 en déplacement horizontal et peut maintenir la position d'équilibre instable de la tige au centre du système.
 
 \section{Contexte}
-C'est l'\acrlong{iAi} qui a proposé de fabriquer un pendule inversé dans le cadre d'un travail
+L'\acrlong{iAi} a proposé de fabriquer un pendule inversé dans le cadre d'un travail
 de Bachelor. Le pendule pourra être utilisé par la suite comme exemple de régulation lors d'événements servant à présenter l'\acrshort{Heig}.
 Dans ce but-là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF est utilisable.
